# lbc-skills

./: .gitignore  CLAUDE.md  README.md
.claude/skills/dou-wentao-perspective/: COMPLETION_REPORT.md  SKILL.md
docs/: md-to-video.md  slide-fenxi.md
skills/: new-skill-001.md
skills/ljg-read/: skill.md
skills/md-to-video/: PIPELINE.md  README.md  SKILL.md  workflow.md
skills/md-to-video/templates/: slide-prompts-guide.md  video-script-template.md
skills/mofa-cli/: Cargo.toml  README.md  SKILL.md  manifest.json
skills/mofa-cli/examples/: test_ocr_layout.rs
skills/mofa-cli/src/: config.rs  dashscope.rs  deepseek_ocr.rs  gemini.rs  image_util.rs  layout.rs  main.rs  pptx.rs  style.rs  veo.rs
skills/mofa-cli/src/pipeline/: cards.rs  comic.rs  infographic.rs  mod.rs  slides.rs  video.rs
skills/mofa-concept/: SKILL.md
skills/mofa-fm/: Cargo.toml  SKILL.md  manifest.json
skills/mofa-fm-api/: SKILL.md
skills/mofa-fm/src/: main.rs
skills/mofa-podcast/: Cargo.toml  SKILL.md  architecture.dot  manifest.json
skills/mofa-podcast/scripts/: test-integration.sh
skills/mofa-podcast/src/: main.rs
skills/mofa-slides/: SKILL.md  USER_GUIDE.md  manifest.json
skills/mofa-slides/styles/: agentic-enterprise-red.toml  agentic-enterprise.toml  cc-research.toml  dark-community.toml  eu-wireframe.toml  fengzikai.toml  gobi.toml  industrial-agent.toml  lingnan.toml  multi-brand.toml  nb-br.toml  nb-pro.toml  nordic-minimal.toml  openclaw-red.toml  opensource.toml  paris-teal.toml  relevant.toml  tectonic.toml  vlinka-dji.toml  what-is-life.toml
(+9 files in other folders)
